Chapter 13 — Listing 13.3: BulkOperations.java Demonstrates: forEach, removeIf, and replaceAll as declarative bulk