@@ -1,14 +1,17 @@
-// Java 8+
+// Java 25+
+// Feature shown: bulk collection operations (forEach, removeIf, replaceAll), final in Java 8+
+
 /**
  * Listing 13.3 — BulkOperations.java
- * Demonstrates: forEach, removeIf, and replaceAll bulk operations on collections
+ * Demonstrates: forEach, removeIf, and replaceAll as declarative bulk
+ * operations on a mutable list, using internal iteration introduced in Java 8.
  * Chapter 13: Declarative Data Transformations
- * Requires: Java 8+
+ * Requires: Java 25+ (compiled with --enable-preview --release 21 for
+ * the void main() instance main method)
  */
 package chapter13;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Logger;
 
@@ -16,23 +19,21 @@ public class BulkOperations {
 
     private static final Logger log = Logger.getLogger(BulkOperations.class.getName());
 
-    // Simple Order record to represent domain data
     record Order(String orderId, double amount, String status) {}
 
-    public static void main(String[] args) {
+    void main() {
 
-        // Build a mutable list of sample orders
-        List<Order> orders = new ArrayList<>(Arrays.asList(
-            new Order("ORD-001", 120.00, "CONFIRMED"),
-            new Order("ORD-002",  45.00, "CANCELLED"),
-            new Order("ORD-003", 200.00, "CONFIRMED"),
-            new Order("ORD-004",  80.00, "CANCELLED"),
-            new Order("ORD-005", 310.00, "PENDING")
+        // Build a mutable list — bulk operations require an owned, mutable list
+        List<Order> orders = new ArrayList<>(List.of(
+            new Order("ORD-001", 100.00, "CONFIRMED"),
+            new Order("ORD-002", 250.00, "CANCELLED"),
+            new Order("ORD-003",  75.00, "CONFIRMED"),
+            new Order("ORD-004", 400.00, "PENDING"),
+            new Order("ORD-005", 180.00, "CANCELLED")
         ));
 
         // forEach — apply a side effect to every element
         // Correct use: logging, notification, audit
-        log.info("=== forEach: log all orders ===");
         orders.forEach(o ->
                 log.info("Processing: " + o.orderId()));
 
@@ -41,22 +42,30 @@ public class BulkOperations {
         orders.removeIf(o ->
                 o.status().equals("CANCELLED"));
 
-        log.info("=== After removeIf (CANCELLED removed): " + orders.size() + " orders remain ===");
+        log.info("After removeIf (CANCELLED removed), size: " + orders.size());
 
         // replaceAll — replace every element with a transformed version
-        // List size unchanged; each element is replaced by the lambda result
+        // List size unchanged; each element is substituted in place
         orders.replaceAll(o ->
                 new Order(o.orderId(),
-                        o.amount() * 0.9,   // apply 10% discount
+                        o.amount() * 0.9,
                         o.status()));
 
-        log.info("=== After replaceAll (10% discount applied) ===");
+        // Log final state to confirm discount was applied
         orders.forEach(o ->
-                log.info(o.orderId() + " | " + o.amount() + " | " + o.status()));
+                log.info("Final: " + o.orderId()
+                        + " amount=" + o.amount()
+                        + " status=" + o.status()));
 
         // Output:
-        // Processing: ORD-001 ... ORD-005 (forEach logs all 5)
-        // After removeIf: 3 orders remain (ORD-002, ORD-004 removed)
-        // After replaceAll: ORD-001=108.0, ORD-003=180.0, ORD-005=279.0
+        // Processing: ORD-001
+        // Processing: ORD-002
+        // Processing: ORD-003
+        // Processing: ORD-004
+        // Processing: ORD-005
+        // After removeIf (CANCELLED removed), size: 3
+        // Final: ORD-001 amount=90.0  status=CONFIRMED
+        // Final: ORD-003 amount=67.5  status=CONFIRMED
+        // Final: ORD-004 amount=360.0 status=PENDING
     }
 }
